[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "netanom"
dynamic = ["version"]
description = "Sanitize Cisco IOS/IOS-XE/NX-OS and Arista EOS configurations before sharing them with an AI or any third party"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Hotion" }]
keywords = [
    "network",
    "cisco",
    "arista",
    "ios",
    "nx-os",
    "eos",
    "anonymization",
    "pseudonymization",
    "sanitizer",
    "security",
    "configuration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/Hotion13/netanom"
Repository = "https://github.com/Hotion13/netanom"
Issues = "https://github.com/Hotion13/netanom/issues"

[project.scripts]
netanom = "sanitize_netconfig:main"

[tool.setuptools]
py-modules = ["sanitize_netconfig"]

[tool.setuptools.dynamic]
version = { attr = "sanitize_netconfig.__version__" }
